# RES_TP1

./: CMakeLists.txt  README.md
ClientApplication/: CMakeLists.txt
ClientApplication/src/: TCPConnection.cpp  TCPConnection.h  UDPConnection.cpp  UDPConnection.h  client.cpp  connection.cpp  connection.h  network.cpp  network.h  terminal.cpp  terminal.h
ServerApplication/: CMakeLists.txt
ServerApplication/src/: TCPConnection.cpp  TCPConnection.h  UDPConnection.cpp  UDPConnection.h  connection.cpp  connection.h  network.cpp  network.h  server.cpp  terminal.cpp  terminal.h
examples/basic/: main.cpp  oldMain.cpp
main/: CMakeLists.txt
main/include/ProjectExample/: object.hpp  world.hpp
main/src/: world.cpp
